Change sidebar styles to match overall nav design, fix automatic scrolling on sub pages when clicking on hash links, prevent horizontal scrolling.

--- a/dev/scss/base/base.scss
+++ b/dev/scss/base/base.scss
@@ -45,6 +45,7 @@ body {
   padding:    0;
   display:    flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 a {
